# quickevent

./: .gitignore  CMakeLists.txt  build-osx.sh  build.bat  dev-osx.sh  patch_runsplugin.py  patch_runsplugin_sort.py  patch_runsplugin_starters.py  patch_runsplugin_starters_robust.py  patch_runsplugin_xml.py  run.bat
.github/actions/appimage/: action.yml
.github/actions/cmake/: action.yml
.github/actions/run-linter/: action.yml
.github/workflows/: appimage.yml  installer.yml  macos.yml  mdbook.yml
libqf/libqfcore/: CMakeLists.txt
libqf/libqfcore/include/qf/core/sql/: qxrecchng.h  qxsql.h  recchng.h
libqf/libqfcore/src/sql/: qxrecchng.cpp  qxrecchng.h  qxsql.cpp  qxsql.h  recchng.cpp  recchng.h
libqf/libqfcore/src/utils/: table.cpp  table.h
libqf/libqfgui/: CMakeLists.txt  libqfgui-cs_CZ.ts  libqfgui-fr_FR.ts  libqfgui-nb_NO.ts  libqfgui-nl_BE.ts  libqfgui-pl_PL.ts  libqfgui-ru_RU.ts  libqfgui-uk_UA.ts
libqf/libqfgui/src/: sqltableitemdelegate.cpp  tableview.cpp
libqf/libqfgui/src/framework/: application.cpp  application.h
libqf/libqfgui/src/model/: logtablemodel.h  sqltablemodel.cpp  sqltablemodel.h  tablemodel.cpp  tablemodel.h
libquickevent/libquickeventcore/: CMakeLists.txt  libquickeventcore-es.ts
libquickevent/libquickeventcore/src/si/: checkedcard.h
libquickevent/libquickeventgui/: CMakeLists.txt  libquickeventgui-cs_CZ.ts
libquickevent/libquickeventgui/src/: reportoptionsdialog.cpp  reportoptionsdialog.h  reportoptionsdialog.ui
libsiut/: CMakeLists.txt
libsiut/src/device/: sidevicedriver.cpp  sitask.cpp
quickevent/app/quickevent/: CMakeLists.txt  quickevent-cs_CZ.ts  quickevent-es.ts  quickevent-fr_FR.ts  quickevent-nb_NO.ts  quickevent-nl_BE.ts  quickevent-pl_PL.ts  quickevent-ru_RU.ts  quickevent-uk_UA.ts
quickevent/app/quickevent/plugins/CardReader/src/: cardcheckerclassiccpp.cpp  cardreaderplugin.cpp  cardreaderplugin.h  cardreaderwidget.cpp  cardreaderwidget.h  cardreaderwidget.ui  testcardreader.cpp  testcardreader.h
quickevent/app/quickevent/plugins/Classes/src/drawing/: classitem.cpp  classitem.h  drawingganttwidget.cpp  drawingganttwidget.h  drawingganttwidget.ui  ganttitem.cpp  ganttitem.h  ganttscene.cpp  ganttscene.h  startslotheader.cpp  startslotheader.h  startslotitem.cpp  startslotitem.h
quickevent/app/quickevent/plugins/Competitors/src/: competitordocument.cpp  competitorwidget.cpp
quickevent/app/quickevent/plugins/Event/src/: eventdialogwidget.cpp  eventdialogwidget.h  eventdialogwidget.ui  eventplugin.cpp  eventplugin.h  openeventdialog.cpp  openeventdialog.h  openeventdialog.ui
quickevent/app/quickevent/plugins/Event/src/services/: emmaclient.cpp  oresultsclient.cpp  oresultsclient.h  oresultsclientwidget.cpp  oresultsclientwidget.h  oresultsclientwidget.ui
quickevent/app/quickevent/plugins/Event/src/services/ofeed/: circulartimerwidget.cpp  circulartimerwidget.h  ofeedclient.cpp  ofeedclient.h  ofeedclientwidget.cpp  ofeedclientwidget.h  ofeedclientwidget.ui  ofeedwelcomedialog.cpp  ofeedwelcomedialog.h  ofeedwelcomedialog.ui  toggleswitch.cpp  toggleswitch.h
quickevent/app/quickevent/plugins/Event/src/services/qx/: qxclientservice.cpp
quickevent/app/quickevent/plugins/Oris/src/: txtimporter.cpp  xmlimporter.cpp  xmlimporter.h
quickevent/app/quickevent/plugins/Receipts/src/: receiptsprinter.cpp
quickevent/app/quickevent/plugins/Relays/src/: relaysplugin.cpp  relayswidget.cpp
quickevent/app/quickevent/plugins/Runs/src/: eventstatisticswidget.cpp  eventstatisticswidget.h  eventstatisticswidget.ui  runsplugin.cpp  runsplugin.h  runstablemodel.cpp  runstablemodel.h  runswidget.cpp  runswidget.h
quickevent/app/quickevent/plugins/Speaker/src/: codeclassresultswidget.cpp
quickevent/app/quickevent/src/: appversion.h  main.cpp
tools/: macos-bundle-fix.sh
